# grafika_hf_osz_2

./: CMakeLists.txt  main.cpp
